--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
     "formik": "^2.2.9",
+    "quill": "^1.3.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-quill": "^1.3.5",
+    "react-quilljs": "^1.2.17",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4",
